[gd_scene load_steps=5 format=3 uid="uid://bgdh7xfvpg10y"]

[ext_resource type="Texture2D" uid="uid://tkhbvaichgus" path="res://World/Copper.png" id="1_1k3s2"]
[ext_resource type="Script" path="res://World/CopperOre.gd" id="1_cfana"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s8t0l"]
radius = 9.0
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1got"]
size = Vector2(37, 29)

[node name="Copper" type="StaticBody2D"]
collision_mask = 2
script = ExtResource("1_cfana")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_1k3s2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_s8t0l")

[node name="GatherArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GatherArea"]
position = Vector2(0.5, 3.5)
shape = SubResource("RectangleShape2D_k1got")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="GatherArea" to="." method="_on_gather_area_body_entered"]
[connection signal="body_exited" from="GatherArea" to="." method="_on_gather_area_body_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
